--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.1"
+        "laravel/ui": "^2.1",
+        "paydunya/paydunya": "^1.0",
+        "stripe/stripe-php": "^7.49"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
