--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "barryvdh/laravel-dompdf": "^0.8.6",
         "consoletvs/charts": "7.*",
         "darryldecode/cart": "^4.1",
         "fideloper/proxy": "^4.2",
@@ -17,6 +18,7 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
+        "laraveldaily/laravel-invoices": "^1.3",
         "paydunya/paydunya": "^1.0",
         "stripe/stripe-php": "^7.49"
     },
