--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "almasaeed2010/adminlte": "~3.0",
         "barryvdh/laravel-dompdf": "^0.8.6",
         "consoletvs/charts": "7.*",
         "darryldecode/cart": "^4.1",
@@ -43,6 +44,9 @@
         "psr-4": {
             "App\\": "app/"
         },
+        "files": [
+            "app/helpers.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
