--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2.5",
         "almasaeed2010/adminlte": "~3.0",
         "barryvdh/laravel-dompdf": "^0.8.6",
+        "caouecs/laravel-lang": "~7.0",
         "consoletvs/charts": "7.*",
         "darryldecode/cart": "^4.1",
         "fideloper/proxy": "^4.2",
@@ -21,7 +22,8 @@
         "laravel/ui": "^2.1",
         "laraveldaily/laravel-invoices": "^1.3",
         "paydunya/paydunya": "^1.0",
-        "stripe/stripe-php": "^7.49"
+        "stripe/stripe-php": "^7.49",
+        "yajra/laravel-datatables": "^1.5"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
